name:               yulug
version:            0.1.0.0
synopsis:           YU Linux Users' Group Homepage
homepage:           htts://yulug.org
license-file:       LICENSE
author:             Amin Bandali
maintainer:         me@aminb.org
category:           Web
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  hs-source-dirs: src/
  build-depends:    base == 4.*
                  , hakyll == 4.6.*
  ghc-options:      -Wall -threaded
  default-language: Haskell2010
